Fixed whitespace error

--- a/css/visual.css
+++ b/css/visual.css
@@ -23,6 +23,7 @@ h3 {
   margin-block-start: auto;
   margin-inline-end: auto;
   margin-inline-start: 5px;
+  white-space: nowrap;
 }
 
 section {
